# harvester_arm_ros2

./: .gitignore  README-ONROBOT.md  README.md  REFERENCES.md
ballcatcher/: package.xml  setup.cfg  setup.py
ballcatcher/ballcatcher/: ball_pose_localization.py  catch_joint_request.py  catch_pose_predict.py  fake_jointstate.py
doc/: handovercomp.md  intelrs.md  onrobotsg.md  robotiq2f.md  urarm.md  zedcam.md
onrobotsg/: package.xml  setup.cfg  setup.py
onrobotsg/config/: gripper_config.yaml
onrobotsg/launch/: bringup_gripper.launch.py
onrobotsg/onrobotsg/: client.py  demo.py  driver.py  server.py
onrobotsg_interfaces/: CMakeLists.txt  package.xml
onrobotsg_interfaces/srv/: GripperSgSrv.srv
pymoveit2/examples/: ex_joint_goal.py  ex_pose_goal.py
rb5_pnp/: package.xml  setup.cfg  setup.py
rb5_pnp/launch/: rb5_pnp_run.launch.py
rb5_pnp/rb5_pnp/: rb5_pnp_aruco_detection.py  rb5_pnp_aruco_grasp.py  rb5_pnp_constant.py
rb5_pnp/supports/: dataset.json  eyeinhand_tf.py  handeye_calibration_log.json  joint-dataset.json
robot_planarrr/: package.xml  setup.cfg  setup.py
robot_planarrr/robot_planarrr/: planar_rr.py  planar_rr_node.py  planar_rr_pub.py  planar_rr_sub.py
robotiq2f/: package.xml  setup.cfg  setup.py
robotiq2f/robotiq2f/: comModbusRtu.py  demo.py  driver.py  gripper_io.py  modbus_crc.py  robotiq_85_gripper.py  server.py
robotiq2f_interfaces/: CMakeLists.txt  package.xml
robotiq2f_interfaces/srv/: GripperR2FCmd.srv  GripperR2FInfo.srv
ros_camera/: package.xml  setup.cfg  setup.py
ros_camera/launch/: harvest_perception.launch.py
ros_camera/ros_camera/: cam_publisher.py  cam_ros_to_cv.py  codetest.py  pose_array_pub.py  pose_array_save.py  rs_crop_harvest_pose.py  rs_crop_localization.py  rs_depth_read.py  rs_detection.py  tf_get.py  tf_pub.py
ros_draft/: code_draft.py  setup.py
ros_draft/kinematic/: tf_get.py
ros_draft/launch/: param.launch.py
ros_draft/perception/: pc_data_pub.py  pc_data_sub.py  pose_array_pub.py
ros_draft/rosgeneral/: joint_state_pub.py  pub_kw.py  turtle_pubsub.py
ros_draft/rosparam/: param_node.py
ros_draft/rosservice/: moveit_fk_request.py  moveit_ik_request.py
ros_draft/ur_control_pub/: minimal_desired_joint_publisher.py  move_to_single_init_pose.py
rosbasic/: AMENT_IGNORE  README.md
rosbasic/custom_srv_msg/: CMakeLists.txt  cmd.txt  package.xml
rosbasic/custom_srv_msg_use_cpp/: CMakeLists.txt  package.xml
rosbasic/custom_srv_msg_use_cpp/src/: msg_pub_cpp.cpp  msg_sub_cpp.cpp  srv_client_cpp.cpp  srv_server_cpp.cpp
rosbasic/custom_srv_msg_use_py/: package.xml  setup.cfg  setup.py
rosbasic/parameter_cpp/: CMakeLists.txt  package.xml
rosbasic/parameter_py/: package.xml  setup.cfg
rosbasic/pubsub_cpp/: CMakeLists.txt  package.xml
rosbasic/pubsub_cpp/src/: pub_cpp.cpp
rosbasic/pubsub_py/: package.xml  setup.cfg  setup.py
rosbasic/ros2_ament_cmake/: CMakeLists.txt  package.xml
rosbasic/ros2_ament_python/: package.xml  setup.cfg  setup.py
ur5_commander/: package.xml  setup.cfg  setup.py
ur5_commander/resource/: ur5eairlabDH.py
ur5_commander/ur5_commander/: endeffector_pose_selection.py  get_pose_trigger.py  harvest.py  harvest_bridge.py  minimal_desired_joint_publisher.py  move_to_single_init_pose.py  moveit_fk_request.py  moveit_ik_request.py
ur5e_handover/: package.xml  setup.cfg  setup.py
ur5e_handover/resource/: arducam.md  estimate_campose_test.py  handover_aruco_rscam_test.py  handover_yolo_test.py  mono_cal.yaml  mono_calibration_stage.py  mono_process.py  stereo_calibration_stage.py  stereo_left.yaml  stereo_process.py  stereo_right.yaml
ur5e_handover/supports/: spatial_transformation.py
ur5e_handover/ur5e_handover/: allpoint_estimation.py  camera-robot-matrix.json  camera-robot-pose.json  camera_allpoint_estimation.py  camera_single_stream.py  camera_stream.py  camera_system.py  center_traker.py  centriod_estimation.py  left.yaml  right.yaml  simplearuco.py  stereo_aruco.py  streo_left.yaml  streo_right.yaml  system_allpoint.py  system_centroid.py  system_complex.py  system_simple.py  system_simple_allpoint.py  test_tf.py  tf_get.py
ur5e_harvest/: package.xml  setup.cfg  setup.py
ur5e_harvest/config/: ur5eairlabcal.yaml
ur5e_harvest/launch/: ur_control_airlab.launch.py
ur5e_harvest/ur5e_harvest/: harvest_bridge.py  (+5 more)
ur5e_pnp/: package.xml  setup.cfg  setup.py
ur_realtime/: package.xml  setup.cfg  setup.py
utils/: joint_record.py  move_to_config.py  move_to_config_action.py
(+54 files in other folders)
