<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>custom_srv_msg_use_cpp</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="yuth@todo.com">ub20</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <!-- Add depend on the package of SRV and MSG file  -->
  <depend>custom_srv_msg</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
