<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>pubsub_py</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="ub20@todo.todo">ub20</maintainer>
  <license>TODO: License declaration</license>

  <!-- ADD THIS IF PACKAGE HAS DEPENDENDCIES (look like for python, we use exec_depend while cpp use depend) -->
  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
